# jpdictsrs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.sh  example.txt
include/: app.h  buffer.h  jikan.h  jmdict.h  jmentry.h  jmentrysense.h  scheduler.h  vocabulary.h
src/: app.cpp  buffer.cpp  jikan.cpp  jmdict.cpp  jmentry.cpp  jmentrysense.cpp  main.cpp  scheduler.cpp  vocabulary.cpp
